--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * FIKO 🐸 v0.5.12 (https://fiko.rokma.rocks)
+ * FIKO 🐸 v0.5.13 (https://fiko.rokma.rocks)
  * 2024 CLASSLESS BLACK & WHITE CSS FRAMEWORK LIBRARY
  * MIT License | https: //github.com/toybreaker/fiko
  * Copyright 2023 Toybreaker - Licensed under MIT
@@ -155,10 +155,14 @@
 /* 🐲 Root Declarations */
 @layer root {
   :root {
+    --icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+
+    --icon-chevron-white: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+
     /* COLOURS FOR LIGHT/DARK MODES */
-    --transparency: 1;
-    --color-white: rgba(255, 255, 255, var(--transparency));
-    --color-black: rgba(0, 0, 0, var(--transparency));
+    --alpha: 1;
+    --color-white: rgba(255, 255, 255, var(--alpha));
+    --color-black: rgba(0, 0, 0, var(--alpha));
 
     /* COLOURS CONSTANT FOR BOTH LIGHT AND DARK MODES */
     /* Some elements need constant colours, whatever the user color mode is. */
@@ -174,6 +178,8 @@
     /* apply the CURRENT colours: */
     background-color: var(--currentBG);
     color: var(--currentTXT);
+    --iconV: var(--icon-chevron);
+    --muted-color: rgba(0, 0, 0, 0.5);
   }
 
   /* When data-theme is set to dark */
@@ -184,11 +190,13 @@
     /* apply the CURRENT colours: */
     background-color: var(--currentBG);
     color: var(--currentTXT);
+    --iconV: var(--icon-chevron-white);
+    --muted-color: rgba(255, 255, 255, 0.5);
   }
 
   :root {
     /* auto changing color transparent - TO DO! */
-    /* --accordion-open-summary-color: var(--currentTXTtrasparent) */
+    /* --accordion-open-summary-color: var(--muted-color) */
 
     --button-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
     --button-hover-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
@@ -200,8 +208,8 @@
     --space: 5vw;
     --spaceLR: 3.3dvw;
     --spaceTB: 1.8dvh;
-    --border: 2px;
-    --border-color: var(--currentTXT);
+    --border: 1px;
+    --border-color: var(--muted-color);
     --radius: 1vw;
     --line-height: 1.15;
 
@@ -222,8 +230,6 @@
     --icon-checkbox: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
 
     --icon-minus: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='5' y1='12' x2='19' y2='12'%3E%3C/line%3E%3C/svg%3E");
-
-    --icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
 
     --icon-date: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect x='3' y='4' width='18' height='18' rx='2' ry='2'%3E%3C/rect%3E%3Cline x1='16' y1='2' x2='16' y2='6'%3E%3C/line%3E%3Cline x1='8' y1='2' x2='8' y2='6'%3E%3C/line%3E%3Cline x1='3' y1='10' x2='21' y2='10'%3E%3C/line%3E%3C/svg%3E");
 
@@ -252,7 +258,166 @@
     font-size: 77%;
   }
 
+  /**
+ * Typography
+ */
+  b,
+  strong {
+    font-weight: bolder;
+  }
+
+  sub,
+  sup {
+    position: relative;
+    font-size: 0.75em;
+    line-height: 0;
+    vertical-align: baseline;
+  }
+
+  sub {
+    bottom: -0.25em;
+  }
+
+  sup {
+    top: -0.5em;
+  }
+
+  address,
+  blockquote,
+  dl,
+  ol,
+  p,
+  pre,
+  table,
+  ul {
+    margin-top: 0;
+    margin-bottom: var(--spaceTB);
+    color: var(--color);
+    font-style: normal;
+    font-weight: var(--font-weight);
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 0;
+    margin-bottom: var(--spaceTB);
+    color: var(--color);
+    font-weight: var(--font-weight);
+    font-size: var(--font-size);
+    line-height: var(--line-height);
+    font-family: var(--font-family);
+  }
+
+  h1 {
+    --pico-color: var(--h1-color);
+  }
+
+  h2 {
+    --pico-color: var(--h2-color);
+  }
+
+  h3 {
+    --pico-color: var(--h3-color);
+  }
+
+  h4 {
+    --pico-color: var(--h4-color);
+  }
+
+  h5 {
+    --pico-color: var(--h5-color);
+  }
+
+  h6 {
+    --pico-color: var(--h6-color);
+  }
+
+  :where(article, address, blockquote, dl, figure, form, ol, p, pre, table, ul)
+    ~ :is(h1, h2, h3, h4, h5, h6) {
+    margin-top: var(--typography-spacing-top);
+  }
+
+  p {
+    margin-bottom: var(--spaceTB);
+  }
+
+  hgroup {
+    margin-bottom: var(--spaceTB);
+  }
+  hgroup > * {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  hgroup > *:not(:first-child):last-child {
+    --pico-color: var(--muted-color);
+    --pico-font-weight: unset;
+    font-size: 1rem;
+    font-family: unset;
+  }
+
+  :where(ol, ul) li {
+    margin-bottom: calc(var(--spaceTB) * 0.25);
+  }
+
+  :where(dl, ol, ul) :where(dl, ol, ul) {
+    margin: 0;
+    margin-top: calc(var(--spaceTB) * 0.25);
+  }
+
+  ul li {
+    list-style: square;
+  }
+
+  mark {
+    padding: 0.125rem 0.25rem;
+    background-color: var(--mark-background-color);
+    color: var(--mark-color);
+    vertical-align: baseline;
+  }
+
   blockquote {
+    display: block;
+    margin: var(--spaceTB) 0;
+    padding: var(--space);
+    border-right: none;
+    border-left: 0.25rem solid var(--muted-color);
+    -webkit-border-start: 0.25rem solid var(--muted-color);
+    border-inline-start: 0.25rem solid var(--muted-color);
+    -webkit-border-end: none;
+    border-inline-end: none;
+  }
+  blockquote footer {
+    margin-top: calc(var(--spaceTB) * 0.5);
+    color: var(--currentTXT);
+    overflow-x: hidden;
+    max-width: 100%;
+  }
+
+  abbr[title] {
+    border-bottom: 1px dotted;
+    text-decoration: none;
+    cursor: help;
+  }
+
+  ins {
+    color: var(--ins-color);
+    text-decoration: none;
+  }
+
+  del {
+    color: var(--del-color);
+  }
+
+  ::-moz-selection {
+    background-color: var(--text-selection-color);
+  }
+
+  ::selection {
+    background-color: var(--text-selection-color);
   }
 
   /**
@@ -279,7 +444,7 @@
   pre,
   code,
   kbd {
-    border-radius: var(--border-radius);
+    border-radius: var(--radius);
     background: var(--code-background-color);
     color: var(--code-color);
     font-weight: var(--font-weight);
@@ -413,7 +578,7 @@
     display: inline-flex;
     position: relative;
     margin-bottom: var(--spacETB);
-    border-radius: var(--border-radius);
+    border-radius: var(--radius);
     box-shadow: var(--group-box-shadow, 0 0 0 rgba(0, 0, 0, 0));
     vertical-align: middle;
     transition: box-shadow var(--transition);
@@ -471,7 +636,7 @@
   [role='group'] [role='button']:not(:first-child),
   [role='group'] input:not([type='checkbox'], [type='radio']):not(:first-child),
   [role='group'] select:not(:first-child) {
-    margin-left: calc(var(--border-width) * -1);
+    margin-left: calc(var(--border) * -1);
   }
   [role='search'] button,
   [role='search'] [type='submit'],
@@ -550,9 +715,8 @@
         select:focus
       )
       [role='button'] {
-      --button-box-shadow: 0 0 0 var(--border-width) var(--primary-border);
-      --button-hover-box-shadow: 0 0 0 var(--border-width)
-        var(--primary-hover-border);
+      --button-box-shadow: 0 0 0 var(--border) var(--primary-border);
+      --button-hover-box-shadow: 0 0 0 var(--border) var(--primary-hover-border);
     }
     [role='search'] button:focus,
     [role='search'] [type='submit']:focus,
@@ -849,24 +1013,22 @@
   }
   nav ol:first-of-type,
   nav ul:first-of-type {
-    margin-left: calc(var(--nav-element-spacing-horizontal) * -1);
+    margin-left: calc(var(--spaceLR) * -1);
   }
   nav ol:last-of-type,
   nav ul:last-of-type {
-    margin-right: calc(var(--nav-element-spacing-horizontal) * -1);
+    margin-right: calc(var(--spaceLR) * -1);
   }
   nav li {
     display: inline-block;
     margin: 0;
-    padding: var(--nav-element-spacing-vertical)
-      var(--nav-element-spacing-horizontal);
+    padding: var(--spaceTB) var(--spaceLR);
   }
   nav li :where(a, [role='link']) {
     display: inline-block;
-    margin: calc(var(--nav-link-spacing-vertical) * -1)
-      calc(var(--nav-link-spacing-horizontal) * -1);
-    padding: var(--nav-link-spacing-vertical) var(--nav-link-spacing-horizontal);
-    border-radius: var(--border-radius);
+    margin: calc(var(--spaceTB) / 4) calc(var(--spaceLR) / 4);
+    padding: calc(var(--spaceTB) / 4) calc(var(--spaceLR) / 4);
+    border-radius: var(--radius);
   }
   nav li :where(a, [role='link']):not(:hover) {
     text-decoration: none;
@@ -881,22 +1043,21 @@
     margin-right: inherit;
     margin-bottom: 0;
     margin-left: inherit;
-    padding: calc(var(--nav-link-spacing-vertical) - var(--border-width) * 2)
-      var(--nav-link-spacing-horizontal);
+    padding: calc(var(--spaceTB) - var(--border) * 2) var(--spaceLR);
   }
   nav[aria-label='breadcrumb'] {
     align-items: center;
     justify-content: start;
   }
   nav[aria-label='breadcrumb'] ul li:not(:first-child) {
-    -webkit-margin-start: var(--nav-link-spacing-horizontal);
-    margin-inline-start: var(--nav-link-spacing-horizontal);
+    -webkit-margin-start: var(--spaceLR);
+    margin-inline-start: var(--spaceLR);
   }
   nav[aria-label='breadcrumb'] ul li:not(:last-child)::after {
     position: absolute;
-    width: calc(var(--nav-link-spacing-horizontal) * 2);
-    -webkit-margin-start: calc(var(--nav-link-spacing-horizontal) / 2);
-    margin-inline-start: calc(var(--nav-link-spacing-horizontal) / 2);
+    width: calc(var(--spaceLR) * 2);
+    -webkit-margin-start: calc(var(--spaceLR) / 2);
+    margin-inline-start: calc(var(--spaceLR) / 2);
     content: var(--nav-breadcrumb-divider);
     color: var(--muted-color);
     text-align: center;
@@ -921,7 +1082,7 @@
   td {
     padding: calc(var(--space) / 2) var(--space);
     width: fit-content;
-    border-bottom: var(--border-width) solid var(--table-border-color);
+    border-bottom: var(--border) solid var(--table-border-color);
     background-color: var(--background-color);
     color: var(--color);
     font-weight: var(--font-weight);
@@ -931,7 +1092,7 @@
 
   tfoot th,
   tfoot td {
-    border-top: var(--border-width) solid var(--table-border-color);
+    border-top: var(--border) solid var(--table-border-color);
     border-bottom: 0;
   }
 
@@ -963,7 +1124,7 @@
     }
 
     li {
-      padding: calc(var(--space) * 0.5) var(--nav-element-spacing-horizontal);
+      padding: calc(var(--space) * 0.5) var(--spaceLR);
     }
 
     li a {
@@ -1018,7 +1179,7 @@
     height: 0;
     margin: var(--spaceTB) 0;
     border: 0;
-    border-top: 1px solid var(--border-color);
+    border-top: 1px solid var(--muted-color);
     color: inherit;
   }
 
@@ -1045,14 +1206,13 @@
   [type='file']::file-selector-button,
   [role='button'] {
     --background-color: var(--currentBG);
-    --border-color: var(--border-color);
     --color: var(--currentTXT);
     --box-shadow: var(--button-box-shadow, 0 0 0 rgba(0, 0, 0, 0));
     padding: 2% var(--spaceLR);
-    border: var(--border-width) solid var(--border-color);
-    border-radius: var(--border-radius);
+    border: var(--border) solid var(--border-color);
+    border-radius: var(--radius);
     outline: none;
-    background-color: var(--background-color);
+    background-color: var(--currentBG);
     box-shadow: var(--box-shadow);
     color: var(--color);
     font-weight: var(--font-weight);
@@ -1079,10 +1239,10 @@
       :focus
     ),
   [role='button']:is([aria-current], :hover, :active, :focus) {
-    --background-color: var(--primary-hover-background);
-    --border-color: var(--primary-hover-border);
+    --background-color: var(--currentTXT);
+    --border-color: var(--muted-color);
     --box-shadow: var(--button-hover-box-shadow, 0 0 0 rgba(0, 0, 0, 0));
-    --color: var(--primary-inverse);
+    --color: var(--currentBG);
   }
   button:focus,
   [type='submit']:focus,
@@ -1091,7 +1251,7 @@
   [type='file']::file-selector-button:focus,
   [role='button']:focus {
     --box-shadow: var(--button-hover-box-shadow, 0 0 0 rgba(0, 0, 0, 0)),
-      0 0 0 var(--outline-width) var(--primary-focus);
+      0 0 0 var(--outline-width) var(--muted-color);
   }
 
   [type='submit'],
@@ -1103,8 +1263,8 @@
   :is(button, [type='submit'], [type='button'], [role='button']).secondary,
   [type='reset'],
   [type='file']::file-selector-button {
-    --background-color: var(--secondary-background);
-    --border-color: var(--secondary-border);
+    --background-color: var(--currentBG);
+    --border-color: var(--muted-color);
     --color: var(--secondary-inverse);
     cursor: pointer;
   }
@@ -1121,8 +1281,8 @@
       :active,
       :focus
     ) {
-    --background-color: var(--secondary-hover-background);
-    --border-color: var(--secondary-hover-border);
+    --background-color: var(--currentBG);
+    --border-color: var(--muted-color);
     --color: var(--secondary-inverse);
   }
   :is(
@@ -1134,7 +1294,7 @@
   [type='reset']:focus,
   [type='file']::file-selector-button:focus {
     --box-shadow: var(--button-hover-box-shadow, 0 0 0 rgba(0, 0, 0, 0)),
-      0 0 0 var(--outline-width) var(--secondary-focus);
+      0 0 0 var(--outline-width) var(--muted-color);
   }
 
   :is(button, [type='submit'], [type='button'], [role='button']).contrast {
@@ -1149,7 +1309,7 @@
       :focus
     ) {
     --background-color: var(--currentBG);
-    --border-color: var(--border-color);
+    --border-color: var(--muted-color);
     --color: var(--currentTXT);
   }
   :is(
@@ -1159,14 +1319,14 @@
       [role='button']
     ).contrast:focus {
     --box-shadow: var(--button-hover-box-shadow, 0 0 0 rgba(0, 0, 0, 0)),
-      0 0 0 var(--outline-width) var(--border-color);
+      0 0 0 var(--outline-width) var(--muted-color);
   }
 
   :is(button, [type='submit'], [type='button'], [role='button']).outline,
   [type='reset'].outline {
     --background-color: transparent;
     --color: var(--currentTXT);
-    --border-color: var(--border-color);
+    --border-color: var(--muted-color);
   }
   :is(button, [type='submit'], [type='button'], [role='button']).outline:is(
       [aria-current],
@@ -1176,7 +1336,7 @@
     ),
   [type='reset'].outline:is([aria-current], :hover, :active, :focus) {
     --background-color: transparent;
-    --color: var(--currentTXTtrasparent);
+    --color: var(--muted-color);
   }
 
   :is(
@@ -1186,7 +1346,7 @@
       [role='button']
     ).outline.secondary,
   [type='reset'].outline {
-    --color: var(--currentTXTtrasparent);
+    --color: var(--muted-color);
     --border-color: currentColor;
   }
   :is(
@@ -1196,7 +1356,7 @@
       [role='button']
     ).outline.secondary:is([aria-current], :hover, :active, :focus),
   [type='reset'].outline:is([aria-current], :hover, :active, :focus) {
-    --color: var(--currentTXTtrasparent);
+    --color: var(--muted-color);
   }
 
   :is(
@@ -1205,7 +1365,7 @@
       [type='button'],
       [role='button']
     ).outline.contrast {
-    --color: var(--currentTXTtrasparent);
+    --color: var(--muted-color);
   }
   :is(
       button,
@@ -1213,7 +1373,7 @@
       [type='button'],
       [role='button']
     ).outline.contrast:is([aria-current], :hover, :active, :focus) {
-    --color: var(--currentTXTtrasparent);
+    --color: var(--muted-color);
   }
 
   :where(
@@ -1239,7 +1399,7 @@
   details {
     display: block;
     margin-bottom: var(--space);
-    border-bottom: var(--border) solid var(--currentTXTtrasparent);
+    border-bottom: var(--border) solid var(--muted-color);
 
     & summary {
       line-height: 2;
@@ -1299,7 +1459,6 @@
     margin-inline-start: calc(var(--space) * 0.5);
     float: right;
     transform: rotate(-90deg);
-    background-image: var(--icon-chevron);
     background-position: center;
     background-size: 2rem auto;
     background-repeat: no-repeat;
@@ -1307,6 +1466,7 @@
     transition: transform var(--transition);
     position: relative;
     top: 8px;
+    background-image: var(--iconV);
   }
 
   &[open] {
